0026287: Bug in NCollection_AccAllocator::Free() sometimes causes crash in debug mode